--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="../scss/style.scss" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
       data-aos-duration="600"
     >
       <h1>Candy One-One</h1>
-      <img class="image" src="../media/candy1.jpg" alt="" />
+      <img class="image" src="media/candy1.jpg" alt="" />
     </div>
     <div
       class="block"
@@ -25,7 +25,7 @@
       data-aos-duration="600"
     >
       <h1>Candy Two</h1>
-      <img class="image" src="../media/candy2.jpg" alt="" />
+      <img class="image" src="media/candy2.jpg" alt="" />
     </div>
     <div
       class="block"
@@ -35,7 +35,7 @@
       data-aos-duration="600"
     >
       <h1>Candy Three</h1>
-      <img class="image" src="../media/candy3.jpg" alt="" />
+      <img class="image" src="media/candy3.jpg" alt="" />
     </div>
     <script src="js/index.js"></script>
   </body>
